Using alpine for minimal image

--- a/Dockerfile.ubuntu
+++ b/Dockerfile.ubuntu
@@ -1,7 +1,9 @@
-# have to use 3.20, because 3.21 has issue with C compilers
-FROM alpine:3.20 AS build 
-RUN apk update \
-    && apk --no-cache --update add build-base autoconf automake gcc
+FROM ubuntu:latest AS build
+RUN apt-get update && \
+    DEBIAN_FRONTEND=noninteractive apt-get install -y --no-install-recommends \
+        autoconf \
+        automake \
+        build-essential
 
 WORKDIR /tbamud
 ADD tbamud .
@@ -12,7 +14,7 @@ RUN ./configure && \
         make clean && \
         make -j8
 
-FROM alpine:latest
+FROM ubuntu:latest
 WORKDIR /tbamud
 # Copy only the specific directories from the build stage
 COPY --from=build /tbamud/bin ./bin
