Added tintin++ and possibility to start playing using 'make play'

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "tbamud"]
 	path = tbamud
 	url = https://github.com/tbamud/tbamud.git
+[submodule "tintin"]
+	path = tintin
+	url = https://github.com/scandum/tintin.git
